[gd_scene load_steps=10 format=3 uid="uid://bajygilvfbv7s"]

[ext_resource type="Script" path="res://test_car_huayu/test_car_4.gd" id="1_65qs5"]
[ext_resource type="Texture2D" uid="uid://q3wn8eyxtqgg" path="res://icon.svg" id="1_w3bxg"]
[ext_resource type="Script" path="res://test_car_huayu/car_state_machine.gd" id="3_ux551"]
[ext_resource type="Script" path="res://test_car_huayu/straight.gd" id="4_dpyya"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_brxqq"]
albedo_color = Color(1, 0.533333, 0.564706, 1)

[sub_resource type="BoxMesh" id="BoxMesh_hunhh"]
material = SubResource("StandardMaterial3D_brxqq")
size = Vector3(0.4, 0.29, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_l63y1"]
size = Vector3(0.55, 0.2, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_472gh"]
height = 0.05

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_npki1"]
albedo_texture = ExtResource("1_w3bxg")

[node name="test_car_4" type="VehicleBody3D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_65qs5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
mesh = SubResource("BoxMesh_hunhh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
shape = SubResource("BoxShape3D_l63y1")

[node name="front_right" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.23, 0.02, 0.3)
use_as_steering = true
wheel_radius = 0.086
suspension_stiffness = 20.0
damping_compression = 0.3
damping_relaxation = 0.5

[node name="MeshInstance3D" type="MeshInstance3D" parent="front_right"]
transform = Transform3D(-7.43094e-09, -0.17, 0, 0.17, -7.43094e-09, 0, 0, 0, 0.17, 0, 0, 0)
mesh = SubResource("CylinderMesh_472gh")
surface_material_override/0 = SubResource("StandardMaterial3D_npki1")

[node name="front_left" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.23, 0.02, 0.3)
use_as_steering = true
wheel_radius = 0.086
suspension_stiffness = 20.0
damping_compression = 0.3
damping_relaxation = 0.5

[node name="MeshInstance3D" type="MeshInstance3D" parent="front_left"]
transform = Transform3D(-7.43094e-09, -0.17, 0, 0.17, -7.43094e-09, 0, 0, 0, 0.17, 0, 0, 0)
mesh = SubResource("CylinderMesh_472gh")
surface_material_override/0 = SubResource("StandardMaterial3D_npki1")

[node name="back_right" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.23, 0.02, -0.3)
use_as_traction = true
wheel_radius = 0.086
suspension_stiffness = 20.0
damping_compression = 0.3
damping_relaxation = 0.5

[node name="MeshInstance3D" type="MeshInstance3D" parent="back_right"]
transform = Transform3D(-7.43094e-09, -0.17, 0, 0.17, -7.43094e-09, 0, 0, 0, 0.17, 0, 0, 0)
mesh = SubResource("CylinderMesh_472gh")
surface_material_override/0 = SubResource("StandardMaterial3D_npki1")

[node name="back_left" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.23, 0.02, -0.3)
use_as_traction = true
wheel_radius = 0.086
suspension_stiffness = 20.0
damping_compression = 0.3
damping_relaxation = 0.5

[node name="MeshInstance3D" type="MeshInstance3D" parent="back_left"]
transform = Transform3D(-7.43094e-09, -0.17, 0, 0.17, -7.43094e-09, 0, 0, 0, 0.17, 0, 0, 0)
mesh = SubResource("CylinderMesh_472gh")
surface_material_override/0 = SubResource("StandardMaterial3D_npki1")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
target_position = Vector3(0, 0, 3)

[node name="FrontRoadRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.07, 1)

[node name="LeftRoadRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.07, 1)

[node name="RightRoadRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.07, 2)

[node name="CarStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("3_ux551")
current_state = NodePath("Straight")

[node name="Straight" type="Node" parent="CarStateMachine"]
script = ExtResource("4_dpyya")
animation_name = "straight"
